# protei-network-hw

./: CMakeLists.txt
example/: example.cpp
include/client/: tcp_client.hpp
include/server/: calculator.hpp  tcp_server.hpp
src/client/: main.cpp  tcp_client.cpp
src/server/: calculator.cpp  main.cpp  tcp_server.cpp
